--- a/PRNFE.MVC/appsettings.json
+++ b/PRNFE.MVC/appsettings.json
@@ -7,6 +7,7 @@
   },
   "AllowedHosts": "*",
     "ApiSettings": {
-        "BaseUrl": "http://localhost:3001"
+        "BaseUrl": "https://localhost:3000",
+        "Url_qlpt": "http://localhost:3001"
     }
 }
