change url call

--- a/PRNFE.MVC/appsettings.json
+++ b/PRNFE.MVC/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ApiSettings": {
-    "BaseUrl": "http://localhost:5029"
+    "BaseUrl": "http://103.149.252.12:8888"
   }
 }
