Replace code with content from minhStash

--- a/PRNFE.MVC/appsettings.json
+++ b/PRNFE.MVC/appsettings.json
@@ -7,6 +7,8 @@
   },
   "AllowedHosts": "*",
   "ApiSettings": {
-    "BaseUrl": "http://localhost:3001"
+    "BaseUrl": "http://103.149.252.12:8888",
+    "Url_qlpt": "http://103.149.252.12:8888/residents"
+
   }
 }
