--- a/PRNFE.MVC/appsettings.json
+++ b/PRNFE.MVC/appsettings.json
@@ -8,8 +8,10 @@
   "AllowedHosts": "*",
 
     "ApiSettings": {
-        "BaseUrl": "http://103.149.252.12:8888",
-        "Url_qlpt": "http://103.149.252.12:8888/residents"
+      "BaseUrl": "http://103.149.252.12:8888",
+      "Url_qlpt": "http://103.149.252.12:8888/residents",
+      "Url_payment": "http://103.149.252.12:8888/payments"
     }
-  }
+
+}
 
